SERVER-6717 use log() in msgasserted() instead of tlog()