src/mongo/util/assert_util.cpp
@@ -147,7 +147,7 @@ namespace mongo {
 
     NOINLINE_DECL void msgasserted(int msgid, const char *msg) {
         assertionCount.condrollover( ++assertionCount.warning );
-        tlog() << "Assertion: " << msgid << ":" << msg << endl;
+        log() << "Assertion: " << msgid << ":" << msg << endl;
         setLastError(msgid,msg && *msg ? msg : "massert failure");
         //breakpoint();
         logContext();
